k8s/base/plantsuite/workflows/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: workflows
spec:
  hosts:
    - workflows.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: workflows
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: workflows-ui
spec:
  hosts:
    - workflows-ui.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: workflows
